<resources>
    <string name="app_name">Modulo4</string>
    <string name="am_tvTitulo">Módulo 4 </string>
    <string name="am_tvSubtitulo">Bienvenido</string>
    <string name="am_btnConsultar">Comenzar</string>

    <string name="am_onResume">onResume</string>
    <string name="am_onStart">onStart</string>
    <string name="am_onStop">onStop</string>
    <string name="am_onPause">onPause</string>
    <string name="am_onRestart">onRestart</string>
    <string name="am_onDestroy">onDestroy</string>
    <string name="am_onCreate">onCreate</string>

    <string name="ad_tvNombre">Nombre</string>
    <string name="ad_tvTelefono">Teléfono</string>
    <string name="ad_tvCorreo">Correo electrónico</string>
    <string name="ad_tvTelefono_numero">55555555</string>
    <string name="ad_tvCorreo_valor">nidia@inventado.com</string>
    <string-array name="genero_array">
        <item>Mujer</item>
        <item>Hombre</item>
    </string-array>
    <string name="ac_spnGenero">Género</string>
    <string name="registrar">Registrar</string>

    <string name="aa_contrasenia">Contraseña</string>
    <string name="aa_btnIngresar">Ingresar</string>
    <string name="aa_msgError">Los datos son incorrectos. Por favor, verifíquelos.</string>
    <string name="aa_preguntaRegistrar">Usuario no encontrado. ¿Desea registrarse con estos datos?</string>
    <string name="aa_msgErrorContrasenia">La contraseña debe ser mayor de 6 caracteres.</string>
    <string name="aa_msgErrorRequerido">Este campo es requerido. Por favor, ingréselo.</string>
    <string name="aa_msgErrorCorreo">El correo no es válido.</string>
    <string name="aa_btnLimpiar">Limpiar</string>

    <string name="aa_tvTitulo">Ingrese sus datos.</string>
    <string name="aa_tvTituloR">Iniciar sesión</string>
    <string name="aa_btnCancelar">Cancelar</string>
    <string name="aa_registrar">Crear cuenta</string>
    <string name="aa_tvTituloI">Crear cuenta</string>
    <string name="aa_btnCrear">Aceptar</string>

    <string name="ar_titulo">Registro</string>
    <string name="ar_descripcion">Complete su registro:</string>
    <string name="ar_btnRegistrar">Registrar</string>
    <string name="ar_btnAceptar">Aceptar</string>
    <string name="ar_btnModificar">Editar</string>

    <string name="ra_mensaje1">El registro se realizó</string>
    <string name="ra_mensajeE">Lo sentimos, por el momento no se  pueden registrar sus datos.</string>
    <string name="ra_mensaje2">Se ha creado la preferencia</string>
    <string name="ra_mensajeRegistro">Se registró un nuevo usuario</string>
    <string name="aa_preguntaModificar">El usuario ya existe. ¿Quiere sobreescribir los datos?</string>
    <string name="ra_mensajeModificacion">Los datos se sobreescribieron.</string>
    <string name="alerta">ALERTA</string>
    <string name="aa_bienvenida">Bienvenida(o)</string>
    <string name="mod_eliminar">Eliminar</string>
    <string name="mod_salir">Cerrar sesión</string>
    <string name="mo_lista">Acerca de</string>
    <string name="mo_creditos">Créditos</string>
    <string name="ai_acercaDe">Aplicación realizada para el Módulo 4. Android Básico. Marzo de 2017. Instructor Javier Mejía Corona.</string>
    <string name="ai_derechos">Hecho en México. Todos los derechos reservados.</string>
    <string name="ai_Creditos">Realizado por: Nidia Irania Orduña Fonseca. Imagenes del sitio: https://es.icons8.com</string>
    <string name="ai_ayuda">En esta aplicación una persona puede iniciar sesión con un usuario (correo electrónico) y contraseña. Es posible cambiar datos (sólo género y contraseña) además se muestra una imagen.</string>
    <string name="mensaje1_camara">El permiso ya fue otorgado previamente</string>
    <string name="mensaje2_camara">Permiso concedido</string>
    <string name="mensaje3_camara">Sin permisos </string>
    <string name="mensaje4_camara">Cámara activada</string>
    <string name="mensaje5_camara">Sin permisos</string>
    <string name="mpu_EditFotoCamara">Editar con la cámara</string>
    <string name="mpu_EditFotoGaleria">Editar de galería</string>
    <string name="mpu_Editar">Foto editada</string>
    <string name="aa_preguntaEliminar">¿Está seguro que desea eliminar a este usuario?</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="bienvenida">Bienvenida</string>
    <string name="aa_tvTituloM">Modificar datos</string>
    <string name="aa_btnRegresar">Regresar</string>
    <string name="aa_msgErrorContra">La contraseña no coincide. Inténtelo nuevamente.</string>
</resources>
