<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="mx.unam.dadm.modulo4.MainActivity">

    <include android:id="@+id/actionBar"
        layout="@layout/action_bar">
    </include>

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/am_tvTitulo"
        android:layout_below="@+id/actionBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:id="@+id/tvSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ai_ayuda"
        android:layout_below="@+id/tvTitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:padding="@dimen/activity_horizontal_margin"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnConsultar"
        android:text="@string/am_btnConsultar"
        android:theme="@style/BotonRaised"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/tvSubtitulo"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
